--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Potential</a>
+        <a class="navbar-brand" href="index.html">Potential</a>
         <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
             data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false"
             aria-label="Toggle navigation">
